# subscriber-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
examples/: simple.rs
src/: lib.rs  subscriber.rs  subscriber_callback.rs  subscriber_config.rs  subscriber_error.rs  subscriber_event.rs  subscriber_event_type.rs  subscriber_server.rs  subscriber_server_handle.rs  subscribers.rs
