[package]
name = "subscriber-rs"
version = "0.0.1"
edition = "2021"
description = "A subscriber framework"
repository = "https://github.com/hube12/subscriber-rs"
license = "MIT OR Apache-2.0"

[lib]
name = "subscriber_rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.56"
