[package]
name = "subscriber-rs"
version = "0.0.1"
edition = "2021"
description = "A subscriber framework"
repository = "https://github.com/hube12/subscriber-rs"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["futures/std", "alloc"]
alloc = []

[dependencies]
futures = { version = "0.3", optional = true }
tokio = {version="1.17.0",features=["full"]}
log = "0.4.16"

[dev-dependencies]
anyhow = "1.0.56"
